# book_learning

./: .gitignore  README.md
golang/little-book-of-channels/: README.md  go.mod  go.sum  main.go
golang/little-book-of-channels/chapter/: chapter1.go  chapter3.go  chapter4.go  common.go
golang/little-book-of-channels/cmd/: action.go  root.go
golang/little-book-of-channels/puzzle/: puzzle.go
haskell/thinkFunctionally/: ChangeLog.md  README.md  package.yaml  stack.yaml  thinkFunctionally.cabal
haskell/thinkFunctionally/src/: Chap1.hs
lisp/racket/htdp/: chapter_1.rkt  chapter_1_2.rkt  chapter_1_2_5.rkt  chapter_3.rkt  exercise_1_3_6.rkt  exercise_1_3_7.rkt  exercise_1_3_7b.rkt  interactive_1_2.rkt  prologue.rkt
lisp/racket/sicp/: chapter_1.rkt
prolog/art_of_prolog/chap1/: example.pl  test.pl
rust/complete_rust_reference_guide/chap10/log4rs_demo/my_app/: Cargo.toml
rust/complete_rust_reference_guide/chap10/user_auth_demo/: Cargo.toml
rust/complete_rust_reference_guide/chap10/user_auth_demo/src/: main.rs
rust/complete_rust_reference_guide/chap3/criterion_demo/: Cargo.toml
rust/complete_rust_reference_guide/chap3/criterion_demo/.criterion/fibonacci 8/base/: estimates.json  sample.json  tukey.json
rust/complete_rust_reference_guide/chap3/criterion_demo/.criterion/fibonacci 8/change/: estimates.json
rust/complete_rust_reference_guide/chap3/criterion_demo/.criterion/fibonacci 8/new/: estimates.json  sample.json  tukey.json
rust/complete_rust_reference_guide/chap3/criterion_demo/benches/: fibonacci.rs
rust/complete_rust_reference_guide/chap3/criterion_demo/src/: lib.rs
rust/complete_rust_reference_guide/chap9/native_counter/native/: Cargo.toml
rust/complete_rust_reference_guide/chap9/native_counter/native/src/: lib.rs
(+373 files in other folders)
